# Hangman

./: README  README.md
c/: Makefile
c/src/: hangman.c  hangman.h  main.c  wordlist.c  wordlist.h
clojure/: Makefile
clojure/src/: hangman.clj  main.clj  wordlist.clj
cpp/: Makefile
cpp/src/: hangman.cpp  hangman.hpp  main.cpp  wordlist.cpp  wordlist.hpp
data/: License
fsharp/: Makefile
fsharp/src/: Hangman.fs  Main.fs  WordList.fs
haskell/: Build.sh  Hangman.cabal  Makefile
haskell/src/: Hangman.hs  Main.hs  WordList.hs
objective-c/: Makefile
objective-c/src/: hangman.h  hangman.m  main.m  nsstringadditions.h  nsstringadditions.m  wordlist.h  wordlist.m
php/: Makefile  Run.sh
php/src/: hangman.php  main.php  wordlist.php
python/: Makefile  Run.sh
python/src/: hangman.py  main.py  wordlist.py
r/: Makefile
r/src/: hangman.r  main.r  wordlist.r
racket/: Makefile
racket/src/: hangman.rkt  main.rkt  wordlist.rkt
rust/: Cargo.toml
rust/src/: hangman.rs  main.rs  word_list.rs
scala/: Makefile
scala/src/: Hangman.scala  Main.scala  WordList.scala
smalltalk/: Hangman-Harmster.1.mcz  Hangman-Harmster.2.mcz  Hangman-skejserjensen.3.mcz  README.md
